fixing the carousel alignment

--- a/app/sass/elements/_carousel.scss
+++ b/app/sass/elements/_carousel.scss
@@ -17,6 +17,7 @@
 
 			.card {
 				.title {
+          margin: 0;
 					@include font('navigation');
 					font-size: 1.125rem;
 					color: $black;
